Corrects word-wrapping problem

--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@ html
 {
   min-height: 100%;
   height: 100%;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body
 {
   min-height: 100%;
-  position: relative;
   background-color: #DF7070;
   font-size: 16px;
   margin: 0;
@@ -89,8 +89,6 @@ a
 {
   .content
   {
-    margin-left: auto;
-    margin-right: auto;
     width: 100%;
     height:  calc(100vh - 167px);
   }
@@ -98,6 +96,7 @@ a
 
 .spotBox
 {
+  position: relative;
   font-family: 'Courgette', cursive;
   font-size: 1.8em;
   font-weight: 400;
@@ -106,13 +105,10 @@ a
   background-color: #FFF;
   margin: 25px;
   padding: 20px;
-  word-wrap: break-word;
+  word-break: break-all;
   
   border: 1.5px dashed #D9230F;
   border-radius: 0.3em;
-  
-  width: 100%;
-  box-sizing: content-box;
 }
 
 hr
